# agentic-finance-app

./: LICENSE  README.md  pyproject.toml
app/graph/: main.py  run.py
app/planner/: agent.py  context_resolver.py  executor.py  schema_adapter.py  system_prompt.py  validator.py
app/schemas/: aggregator.py  base.py  confidence.py  context.py  planner.py  state.py
app/utils/: llm_client.py
experiments/: project_template.ipynb
